# govee-artnet-lan-bridge

./: .gitignore  API.md  ARCHITECTURE_CHANGES.md  CHANGELOG.md  CLI_SHELL_EXPANSION_PLAN.md  CLI_SHELL_README.md  INSTALL.md  Makefile  PHASE2_PR_DESCRIPTION.md  PHASE3B_PR_DESCRIPTION.md  PHASE3_PR_DESCRIPTION.md  PHASE4_PR_DESCRIPTION.md  PHASE5_PR_DESCRIPTION.md  PHASE6_PR_DESCRIPTION.md  README.md  README_CLI_SHELL.md  REFACTOR_PLAN.md  USAGE.md  pyproject.toml  requirements.txt
.github/workflows/: build-deb.yml  python-app.yml
packaging/config/: dmx-bridge.toml  dmx-bridge.toml.example  govee-bridge.toml  govee-bridge.toml.example
packaging/debian/: conffiles  control.template  postinst  postrm  preinst  prerm
packaging/debian/dmx-lan-bridge/DEBIAN/: control  postrm  preinst
packaging/debian/dmx-lan-bridge/opt/dmx-lan-bridge/dmx_lan_bridge/: __main__.py  api.py  capabilities.py  events.py  health.py  logging.py  sender.py
packaging/debian/dmx-lan-bridge/usr/share/doc/dmx-lan-bridge/: copyright
packaging/systemd/: dmx-bridge-user.service  dmx-bridge.service  govee-bridge-user.service  govee-bridge.service
res/: capability_catalog.json  capability_catalog_govee.json  capability_catalog_lifx.json
scripts/: install.sh
src/artnet_lan_bridge/: __main__.py  api.py  artnet.py  capabilities.py  cli.py  config.py  db.py  devices.py  discovery.py  log_buffer.py  metrics.py  poller.py  protocol.py  sender.py
src/artnet_lan_bridge/protocol/: __init__.py  govee.py  lifx.py
src/dmx_lan_bridge/: __init__.py  __main__.py  api.py  artnet.py  capabilities.py  cli.py  config.py  db.py  devices.py  discovery.py  dmx.py  events.py  logging.py  metrics.py  poller.py  sacn.py  sender.py  udp_protocol.py
src/dmx_lan_bridge/protocol/: __init__.py  base.py  govee.py  lifx.py
src/govee_artnet_lan_bridge/: __init__.py  __main__.py  api.py  artnet.py  capabilities.py  cli.py  config.py  db.py  devices.py  discovery.py  health.py  logging.py  metrics.py  poller.py  protocol.py  sender.py  shell.py
src/govee_artnet_lan_bridge/protocol/: base.py  govee.py
src/govee_artnet_lan_bridge/shell/: __init__.py  autocomplete_config.py  controllers.py  core.py  help_formatter.py  keybindings.py  layout_builder.py  shell_utils.py  toolbar.py  ui_components.py
src/govee_artnet_lan_bridge/shell/command_handlers/: __init__.py  config.py  devices.py  mappings.py  monitoring.py
tests/: test_api.py  test_artnet.py  test_capabilities.py  test_cli.py  test_config.py  test_devices.py  test_discovery.py  test_integration.py  test_poll_logging.py  test_poller.py  test_sender.py  test_shell.py  test_shell_advanced.py  test_wrap_govee_command.py
