[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "govee-artnet-lan-bridge"
version = "1.0.3"
description = "Asyncio entrypoint, configuration loader, and structured logging for the Govee Artnet LAN bridge."
readme = "LICENSE"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Govee Bridge Maintainers" }]
dependencies = [
    "fastapi>=0.101.0",
    "httpx>=0.26.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "rich>=13.0.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
govee-artnet-bridge = "govee_artnet_lan_bridge.__main__:run"
govee-artnet-cli = "govee_artnet_lan_bridge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/govee_artnet_lan_bridge" = ["res/capability_catalog.json"]
