[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artnet-lan-bridge"
version = "2.0.0"
description = "Multi-protocol ArtNet to LAN device bridge supporting Govee, LIFX, and other smart lighting protocols."
readme = "LICENSE"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ArtNet LAN Bridge Maintainers" }]
dependencies = [
    "fastapi>=0.101.0",
    "httpx>=0.26.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "rich>=13.0.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
artnet-lan-bridge = "artnet_lan_bridge.__main__:run"
artnet-lan-cli = "artnet_lan_bridge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/artnet_lan_bridge" = ["res/capability_catalog.json"]
