[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmx-lan-bridge"
version = "2.0.0"
description = "Multi-protocol DMX to LAN device bridge supporting ArtNet, sACN (future), and smart lighting devices (Govee, LIFX, WiZ)."
readme = "LICENSE"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "DMX LAN Bridge Maintainers" }]
dependencies = [
    "fastapi>=0.101.0",
    "httpx>=0.26.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "rich>=13.0.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
# Primary commands
dmx-lan-bridge = "dmx_lan_bridge.__main__:run"
dmx-lan-cli = "dmx_lan_bridge.cli:main"

# Legacy aliases for backwards compatibility (deprecated, will be removed in 3.0)
artnet-lan-bridge = "dmx_lan_bridge.__main__:run"
artnet-lan-cli = "dmx_lan_bridge.cli:main"
govee-artnet-bridge = "dmx_lan_bridge.__main__:run"
govee-artnet-cli = "dmx_lan_bridge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/dmx_lan_bridge" = [
    "res/capability_catalog_govee.json",
    "res/capability_catalog_lifx.json"
]
